--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
   },
   "engines": {
     "node": ">=4.0"
-  }
+  },
+  "keywords": [
+    "hapi",
+    "plugin",
+    "bluebird",
+    "coroutine",
+    "async",
+    "plugin"
+  ]
 }
