--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kookaburra",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Kookaburra is a Hapi plugin that lets you use generator function coroutines as handlers using Bluebird",
   "repository": "xargi/kookaburra",
   "main": "index.js",
@@ -19,7 +19,7 @@
     "bluebird": "^3.4.1"
   },
   "peerDependencies": {
-    "hapi": "14.x"
+    "hapi": "13.x || 14.x"
   },
   "engines": {
     "node": ">=4.0"
